website/versioned_docs/version-0.26/tabbarios.md
---
id: version-0.26-tabbarios
title: TabBarIOS
original_id: tabbarios
---

### Props

* [View props...](view.md#props)

- [`barTintColor`](tabbarios.md#bartintcolor)
- [`style`](tabbarios.md#style)
- [`tintColor`](tabbarios.md#tintcolor)
- [`translucent`](tabbarios.md#translucent)
- [`unselectedTintColor`](tabbarios.md#unselectedtintcolor)

---

# Reference

## Props

### `barTintColor`

Background color of the tab bar

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `style`

| Type                  | Required |
| --------------------- | -------- |
| [View](view.md#style) | No       |

---

### `tintColor`

Color of the currently selected tab icon

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `translucent`

A Boolean value that indicates whether the tab bar is translucent

| Type | Required |
| ---- | -------- |
| bool | No       |

---

### `unselectedTintColor`

Color of text on unselected tabs

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |
